Adjusts more downgrade errors